--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -43,18 +43,6 @@
 </head>
 <body>
 <nav>
-    <!--  <div id="navigationBody">-->
-    <!--    <div class="logo">-->
-    <!--      <a href="#">-->
-    <!--        <img src="/logo.jpg" alt="logo" height="100px" width="150px">-->
-    <!--      </a>-->
-    <!--    </div>-->
-    <!--    <ul id="listItems">-->
-    <!--      <li><a href="/home"></a>Home</li>-->
-    <!--      <li><a href="/login"></a>Login</li>-->
-    <!--      <li><a href="/register"></a>Register</li>-->
-    <!--    </ul>-->
-    <!--  </div>-->
     <div id="navigationBody">
         <div class="logo">
             <a href="#">
@@ -62,9 +50,8 @@
             </a>
         </div>
         <ul id="listItems">
-            <li><a th:href="@{/home}">Home</a></li>
+            <li><a th:href="@{/challeges/main}">Challenges</a></li>
             <li><a th:href="@{/resources}">Resources</a></li>
-            <li><a th:href="@{/profile}">Profile</a></li>
             <li><form th:action="@{/logout}" th:method="post">
                 <button id="logout" class="btn-link btn">Logout</button>
             </form></li>
