--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -6,6 +6,14 @@
     <!--  Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Scope+One&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +21,48 @@
     <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
 
     <style>
+        #weatherHeader h1 {
+            font-family: 'Satisfy', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 44px;
+        }
+        #weatherHeader {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        #weatherTitle {
+            display: flex;
+        }
+
+        #weatherP {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #weatherP p {
+            font-family: 'Scope One', serif;
+            text-align: center;
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: 20px;
+            margin-bottom: 50px;
+            font-size: 20px;
+        }
+
+        #weatherBody {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+        }
         /* Nav Bar */
 
         #listItems {
@@ -51,6 +101,7 @@
             color: black;
             text-decoration: none;
         }
+
         h1 {
             font-family: 'Sen', sans-serif;
         }
@@ -66,6 +117,66 @@
             align-items: center;
             margin-top: 0;
         }
+
+        #date {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #FFDAF5;
+            border-radius: 50px;
+            width: 600px;
+            height: 100px;
+            margin-bottom: 10px;
+        }
+        #date h1 {
+            margin: 20px;
+            font-family: 'Satisfy', cursive;
+        }
+
+        #weather {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #DAF6FF;
+            border-radius: 50px;
+            width: 600px;
+            height: 100px;
+            margin-bottom: 10px;
+        }
+        #weather h1 {
+            margin: 20px;
+            font-family: 'Satisfy', cursive;
+        }
+
+        #entry {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #FFDAF5;
+            border-radius: 50px;
+            width: 600px;
+            height: 100px;
+            margin-bottom: 10px;
+        }
+        #entry h1 {
+            margin: 20px;
+            font-family: 'Satisfy', cursive;
+        }
+
+        #saved {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #DAF6FF;
+            border-radius: 50px;
+            width: 600px;
+            height: 100px;
+            margin-bottom: 10px;
+        }
+        #saved h1 {
+            margin: 20px;
+            font-family: 'Satisfy', cursive;
+        }
     </style>
 </head>
 <body>
@@ -74,18 +185,50 @@
         <div class="logo">
             <a href="#">
                 <img src="/logo.jpg"
-                     alt="logo" height="100px" width="150px">
+                     alt="logo" height="100px" width="100px">
             </a>
         </div>
         <ul id="listItems">
             <li><a th:href="@{/challenges/main}">Challenges</a></li>
             <li><a th:href="@{/resources}">Resources</a></li>
-            <li><form th:action="@{/logout}" th:method="post">
-                <button id="logout" class="btn-link btn">Logout</button>
-            </form></li>
+            <li>
+                <form th:action="@{/logout}" th:method="post">
+                    <button id="logout" class="btn-link btn">Logout</button>
+                </form>
+            </li>
         </ul>
     </div>
+    </div>
 </nav>
+<div id="weatherBody">
+    <div id="weatherHeader">
+        <div id="weatherTitle">
+            <h1>Weather Saving’s Challenge</h1>
+            <img src="/sun.svg" alt="sun" width="150px" height="100px">
+        </div>
+        <div id="weatherP">
+            <img src="/light.gif" alt="light" height="75px" width="75px">
+            <p>The Weather Saving’s Challenge is a fun and random challenge because the amount of money you save is
+                based off of the temperature of that day you chose!
+                Pick a day of the week you want to start, then come and track how much your savings grow!</p>
+        </div>
+    </div>
+    <div id="date">
+        <h1>Today's Date</h1>
+        <h1>12/20/2021</h1>
+    </div>
+    <div id="weather">
+        <h1>Today's Weather</h1>
+        <h1>75°</h1>
+    </div>
+    <div id="entry">
+        <h1>Today's Entry</h1>
+        <h1>$75</h1>
+    </div>
+    <div id="saved">
+        <h1>Total Saved</h1>
+        <h1>$75</h1>
+    </div>
 </div>
 </body>
 </html>
