--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Weather Savings Challenge</title>
@@ -190,7 +190,7 @@
         </div>
         <ul id="listItems">
             <li><a th:href="@{/challenges/main}">Challenges</a></li>
-            <li><a th:href="@{/resources}">Resources</a></li>
+            <li><a th:href="@{/profile}">Profile</a></li>
             <li>
                 <form th:action="@{/logout}" th:method="post">
                     <button id="logout" class="btn-link btn">Logout</button>
