I offically have something on every page

--- a/src/main/resources/templates/52week.html
+++ b/src/main/resources/templates/52week.html
@@ -6,6 +6,10 @@
     <!--  Google Fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mr+Bedfort&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -66,6 +70,28 @@
             align-items: center;
             margin-top: 0;
         }
+        #challengeBody {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+
+        #challengeHeading p {
+            font-family: 'Sen', sans-serif;
+            letter-spacing: 1px;
+            width: 75%;
+            font-size: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-left: 125px;
+            color: #777777;
+        }
+        #challengeHeading h1 {
+            font-family: 'Mr Bedfort', cursive;
+            font-size: 48px;
+        }
     </style>
 </head>
 <body>
@@ -86,5 +112,12 @@
         </ul>
     </div>
 </nav>
+<div id="challengeBody">
+    <div id="challengeHeading">
+        <h1>52 Week Savings Challenge</h1>
+        <p>The 52 Week Saving’s Challenge is by far one of the most popular of the challenges! Each week, for 52 weeks [one year], you’ll put away a pre selected amount!
+            All you have to do here is determine your amount you’ll be saving, jot it down and watch as your savings grow!</p>
+    </div>
+</div>
 </body>
 </html>
