--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -112,6 +112,35 @@
 
         }
 
+        #whyHeader h1{
+            font-family: 'Satisfy', cursive;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #whyHeader p {
+            text-align: center;
+            font-size: 20px;
+            font-family: 'Quicksand', sans-serif;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+        }
+
+        #whyBox {
+            background-color: #DCF7FF;
+            border-radius: 50px;
+            height: 200px;
+            width: 75%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 50px;
+            margin-left: 150px;
+        }
+
     </style>
 </head>
 <body>
