--- a/src/main/resources/templates/52week.html
+++ b/src/main/resources/templates/52week.html
@@ -115,8 +115,12 @@
 <div id="challengeBody">
     <div id="challengeHeading">
         <h1>52 Week Savings Challenge</h1>
+        <div id="challengesP">
+            <img src="">
         <p>The 52 Week Saving’s Challenge is by far one of the most popular of the challenges! Each week, for 52 weeks [one year], you’ll put away a pre selected amount!
             All you have to do here is determine your amount you’ll be saving, jot it down and watch as your savings grow!</p>
+            <img src="">
+        </div>
     </div>
 </div>
 </body>
