--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -93,6 +93,7 @@
             color: black;
             text-decoration: none;
         }
+
         #listItems a {
             color: black;
             text-decoration: none;
@@ -199,6 +200,10 @@
             because once you’re able to sit down and figure out what it is you’re spending your money on, then you’ll be
             able to
             figure out where you’re able to make cut backs and create opportunity for savings. </p>
+        <p>So what’s a Saving’s Challenge?<br>
+            Simply put, a saving’s challenge is when you save a set amount of money, depending on the rules of the
+            specific challenge. It’s an easy and fun way to keep you focused on your goal and helps remind you of what’s
+            necessary.</p>
         <p>So what’s this website for?<br>
             As a developer, I realized that there are not many online tools to help with savings challenges to track
             your
@@ -217,7 +222,7 @@
     <div class="buttonHome">
         <button id="getStarted"><a th:href="@{/login}">Get Started!</a></button>
     </div>
-<!--    <a th:href="@{/login}">Not Registered?</a>-->
+    <!--    <a th:href="@{/login}">Not Registered?</a>-->
 </div>
 </body>
 </html>
