--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -59,6 +59,7 @@
             font-family: 'Satisfy', cursive;
             width: 350px;
             margin: 30px;
+            font-size: 20px;
 
 
         }
