--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -259,7 +259,7 @@
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a href="/home">
+            <a th:href="/home">
                 <img src="/logo.jpg" alt="logo" height="100px" width="150px">
             </a>
         </div>
