--- a/src/main/resources/templates/nospend.html
+++ b/src/main/resources/templates/nospend.html
@@ -119,7 +119,7 @@
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a href="#">
+            <a th:href="@{/home}">
                 <img src="/logo.jpg"
                      alt="logo" height="100px" width="150px">
             </a>
