--- a/src/main/resources/templates/weather.html
+++ b/src/main/resources/templates/weather.html
@@ -183,7 +183,7 @@
 <nav>
     <div id="navigationBody">
         <div class="logo">
-            <a href="#">
+            <a th:href="@{/home}">
                 <img src="/logo.jpg"
                      alt="logo" height="100px" width="100px">
             </a>
