Minor updates, centered login page, all the links in nav bar work now, all pages have atleast one thing on them. Now I need to start figuring out the bag end portions

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -205,7 +205,7 @@
             specific challenge. It’s an easy and fun way to keep you focused on your goal and helps remind you of what’s
             necessary.</p>
         <p>So what’s this website for?<br>
-            As a developer, I realized that there are not many online tools to help with savings challenges to track
+            As a developer, I realize that there are not many online tools to help with savings challenges to track
             your
             progress. Theres plenty of options to get hands on books and PDF versions but I wanted something I could
             fill out
