--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -124,9 +124,9 @@
                 </a>
             </div>
             <ul id="listItems">
-                <li><a th:href="/home">Home</a></li>
-                <li><a th:href="/login">Login</a></li>
-                <li><a th:href="/register">Register</a></li>
+                <li><a th:href="@{/home}">Home</a></li>
+                <li><a th:href="@{/login}">Login</a></li>
+                <li><a th:href="@{/register}">Register</a></li>
             </ul>
         </div>
     </nav>
