Updates, youtube API up and running

--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -146,10 +146,11 @@
         }
 
         .youtubeVideos {
-            background-color: #5a5a5a;
+            background-color: #ccf3ff;
+            border-radius: 50px;
         }
 
-        #youtube > img:hover {
+        #youtube img:hover {
             background-color: #7fcffd;
         }
     </style>
@@ -200,8 +201,8 @@
             parturient. Gravida orci arcu eget diam sit eu, pretium lectus non. Orci phasellus et nullam dui cursus.</p>
     </div>
     <div id="relatedVideos">
-        <h1>Related Videos</h1>
         <div class="youtubeVideos">
+            <h1>Related Videos</h1>
 
         </div>
     </div>
