--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -53,7 +53,7 @@
 
         sub {
             font-size: 24px;
-            font-family: 'Over the Rainbow', cursive;
+            font-family: 'Over the Rainbow', cursive;+
             display: flex;
             justify-content: center;
             align-items: center;
@@ -146,7 +146,7 @@
         }
 
         .youtubeVideos {
-            background-color: #ccf3ff;
+            /*background-color: #ccf3ff;*/
             border-radius: 50px;
         }
 
