--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -175,7 +175,7 @@
             <ul id="listItems">
                 <li><a th:href="@{/resources}">Resources</a></li>
                 <li><a th:href="@{/login}">Login</a></li>
-                <li><a th:href="@{/register}">Register</a></li>
+                <li><a th:href="@{/challenges/main}">Challenges</a></li>
             </ul>
         </div>
     </nav>
